--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     }
   ],
   "main": "src/index.js",
+  "scripts": {
+    "build": "./node_modules/.bin/gulp build"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/kenzanlabs/pipeline-compile-sass"
